# refine

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pytest.ini  404.html  CHANGELOG.md  README.md  cliff.toml  index.html  mise.toml  mkdocs.yml  objects.inv  pyproject.toml  renovate.json5
.github/: dependabot.yml
.github/actions/setup-virtualenv/: action.yml
.github/workflows/: ci.yml  gh-pages.yml  release.yml
.pre-commit-hooks/: ref-doc-stubs.py
assets/: _mkdocstrings.css
codemods/: index.html
configuration/: index.html
docs/: config.md  index.md
docs/codemods/: index.md
docs/configuration/: index.md
docs/installation/: index.md
docs/reference/recode/: abc.md  config.md  exc.md  processor.md  registry.md  testing.md  utils.md  version.md
docs/reference/recode/mods/cli/: flags.md
docs/reference/recode/mods/sql/: fmt.md  utils.md
docs/reference/refine/: abc.md  cache.md  cli.md  config.md  exc.md  processor.md  registry.md  testing.md  utils.md
docs/reference/refine/mods/cli/: flags.md
docs/reference/refine/mods/sql/: fmt.md  sqruff_backend.md  utils.md
installation/: index.html
reference/recode/abc/: index.html
reference/recode/config/: index.html
reference/recode/exc/: index.html
reference/recode/mods/cli/flags/: index.html
reference/recode/mods/sql/fmt/: index.html
reference/recode/mods/sql/utils/: index.html
reference/recode/processor/: index.html
reference/recode/registry/: index.html
reference/recode/testing/: index.html
reference/recode/utils/: index.html
reference/refine/abc/: index.html
reference/refine/cache/: index.html
reference/refine/cli/: index.html
reference/refine/config/: index.html
reference/refine/exc/: index.html
reference/refine/mods/cli/flags/: index.html
reference/refine/mods/sql/fmt/: index.html
reference/refine/mods/sql/sqruff_backend/: index.html
reference/refine/mods/sql/utils/: index.html
reference/refine/processor/: index.html
reference/refine/registry/: index.html
reference/refine/testing/: index.html
reference/refine/utils/: index.html
search/: search_index.json
src/codemod/: __main__.py  abc.py  config.py  exc.py  processor.py  registry.py  testing.py  utils.py
src/codemod/mods/cli/: flags.py
src/codemod/mods/sql/: .sqlfluff  fmt.py  utils.py
src/recode/: __init__.py  __main__.py  abc.py  config.py  processor.py  registry.py  testing.py  utils.py
src/recode/mods/cli/: flags.py
src/recode/mods/sql/: .sqlfluff  fmt.py  utils.py
src/refine/: __init__.py  __main__.py  abc.py  cache.py  cli.py  config.py  exc.py  processor.py  registry.py  testing.py  utils.py
src/refine/mods/cli/: flags.py
src/refine/mods/sql/: .sqruff  fmt.py  sqruff_backend.py  utils.py
tests/: .ruff.toml  conftest.py  test_cache.py  test_config.py  test_golden.py  test_processor.py  test_registry.py
tests/abc/: test_abc.py
tests/abc/files/: add-imports.py  add-imports.updated.py  add-remove-imports.py  add-remove-imports.updated.py  remove-imports.py  remove-imports.updated.py
tests/cli/: conftest.py  test_basics.py
tests/mods/cli/: test_flags.py
tests/mods/cli/files/flags/: annotated-argument.py  annotated-function.py  annotated-function.updated.py  assignment-expansion.py  assignment-expansion.updated.py  django-base-command.py  django-base-command.updated.py  django-command-nested-groups.py  django-command-nested-groups.updated.py  django-command-with-groups.py  django-command-with-groups.updated.py  maintain-quotes.py  maintain-quotes.updated.py  mixed-frameworks.py  mixed-frameworks.updated.py  non-annotated-argument.py  non-annotated-argument.updated.py  noop.py
tests/mods/sql/: __init__.py  test_fmt.py  test_sqruff_backend.py  test_utils.py
tests/mods/sql/files/fmt/: attribute-with-comment.updated.py  bytestrings.updated.py  long-string.updated.py  maintain-quotes.py  multiline-attribute.py  oneline-attribute.py  oneline-attribute.updated.py  weird-indentation-attr.updated.py  weird-indentation-call.updated.py
tests/mods/sql/files/fmt-sqruff/: attribute-with-comment.py  attribute-with-comment.updated.py  bytestrings.py  case-when.py  case-when.updated.py  funcall-with-comment.py  funcall-with-comment.updated.py  long-string.py  long-string.updated.py  maintain-quotes.updated.py  weird-indentation-attr.py  weird-indentation-attr.updated.py  weird-indentation-call.py
tests/mods/sql/files/fmt/sqlfluff/: funcall-with-comment.updated.py  multiline-attribute.updated.py
tests/mods/sql/files/fmt/sqruff/: bytestrings.updated.py  multiline-attribute.updated.py  weird-indentation-call.updated.py
tools/: bench.py
